fixed fourth slide align

--- a/resource/title_style.css
+++ b/resource/title_style.css
@@ -72,6 +72,7 @@ html, body {
     background-image: url('ban-img.png');
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    text-align: center;
 }
 
 .crutch {
